--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
-torch==2.0.1+cpu
-torchvision==0.15.2+cpu
-torchaudio==2.0.2+cpu
---extra-index-url https://download.pytorch.org/whl/cpu
+numpy==1.26.4
+pandas==2.1.4
+scikit-learn==1.3.2
+pyvis==0.3.2
+plotly==5.18.0
+joblib==1.3.2
+streamlit==1.35.0
+
 
 torch-geometric==2.4.0
 pandas==2.1.4
@@ -11,3 +15,4 @@ pyvis==0.3.2
 plotly==5.18.0
 joblib==1.3.2
 streamlit==1.35.0
+
